[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemies/TANK.gd" type="Script" id=1]
[ext_resource path="res://scenes/Destructable.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/texture/TANK/jug.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/CautionScanner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/TankCannon.gd" type="Script" id=5]
[ext_resource path="res://scenes/bullets/PlazmaBullet.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59.3696, 52.1727 )

[node name="TANK" type="KinematicBody2D"]
position = Vector2( 0, -60 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Destructable" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Hitbox" type="Area2D" parent="Body"]
collision_layer = 8
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Body/Hitbox"]
scale = Vector2( 2.4297, 2.4297 )
texture = ExtResource( 3 )
flip_h = true
vframes = 4
hframes = 6
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hitbox"]
shape = SubResource( 2 )

[node name="CautionScanner" parent="." instance=ExtResource( 4 )]
visible = false

[node name="TankCannon" type="Node2D" parent="."]
position = Vector2( -66.128, -24.0771 )
scale = Vector2( -1, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
BulletBigScene = ExtResource( 6 )
rate_of_fire = 2.0

[node name="RateOfFire" type="Timer" parent="TankCannon"]
wait_time = 0.51
autostart = true
[connection signal="area_shape_entered" from="Body/Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="body_entered" from="Body/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="CautionScanner" to="." method="_on_CautionScanner_area_entered"]
[connection signal="timeout" from="TankCannon/RateOfFire" to="TankCannon" method="_on_RateOfFire_timeout"]
